latex auxiliar docs gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,46 @@ Thumbs.db
 *.tmp
 *.swp
 *~
+
+# LaTeX build artifacts (keep .tex and .pdf tracked)
+*.aux
+*.bbl
+*.bcf
+*.blg
+*.fdb_latexmk
+*.fls
+*.glg
+*.glo
+*.gls
+*.glsdefs
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
+*.lot
+*.nav
+*.out
+*.run.xml
+*.snm
+*.synctex.gz
+*.toc
+*.vrb
+*.xdv
+*.acn
+*.acr
+*.alg
+*.loa
+*.lol
+*.maf
+*.mtc
+*.mtc0
+*.nlo
+*.nto
+*.spl
+*.tdo
+*.tex.bak
+*.thm
+*.xdy
+_minted*
+*.pyg
